# ocaml-dns

./: dns-client-miou-unix.opam  dns-client.opam  dns-resolver.opam  dnssec.opam
app/: dune
client/: dns_client.ml  dns_client.mli
dnssec/: dnssec.ml  dune
lwt/client/: dns_client_lwt.ml  dune
miou/client/: dns_client_miou_unix.ml  dune
src/: dns.ml  dns.mli
test/: server.ml
